--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "gatsby": "^2.31.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-styled-components": "^3.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
