--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "gatsby": "^2.31.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-styled-components": "^3.10.0",
